fixed 1 bug on IE for footer and 1 on iPad for the map

--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -89,6 +89,18 @@
     }
 }
 
+// Bug on IE 11
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    .footer-menu li {
+        //flex: 1 1 1 !important;
+        flex-basis: 5% !important;
+
+        &:nth-child(3) {
+            flex-basis: 9% !important;
+        }
+    }
+}
+
 .copyright {
     text-align: center;
     margin-bottom: 150px;
