--- a/app/styles/_ft.scss
+++ b/app/styles/_ft.scss
@@ -221,7 +221,7 @@
     @include media-breakpoint-down(md){
         width: 280px;
         height: 350px;
-        right: 0;
+        right: -14px;;
     }
 
     @include media-breakpoint-down(sm){
@@ -239,6 +239,10 @@
     z-index: 2;
 
     @include media-breakpoint-down(md){
+        right: -17%;
+    }
+
+    @include media-breakpoint-down(sm){
         display: none;
     }
 
@@ -257,31 +261,61 @@
     .castrocielo {
         top: 40%;
         left: 46%;
+
+        @include media-breakpoint-down(md){
+            top: 33%;
+            left: 31%;
+        }
     }
 
     .sangiorgioinbosco {
         top: 6%;
         right: 43%;
+
+        @include media-breakpoint-down(md){
+            top: 7%;
+            right: 56%;
+        }
     }
 
     .sanpellegrinoterme {
         top: 2%;
         right: 59%;
+
+        @include media-breakpoint-down(md){
+            top: 4%;
+            right: 67%;
+        }
     }
 
     .scarperia {
         top: 29%;
         left: 28%;
+
+        @include media-breakpoint-down(md){
+            top: 25%;
+            left: 17%;
+        }
     }
 
     .sstefano {
         bottom: 10%;
         left: 48%;
+
+        @include media-breakpoint-down(md){
+            bottom: 26%;
+            left: 32%;
+        }
     }
 
     .valdisotto {
         top: -2%;
         right: 58%;
+
+        @include media-breakpoint-down(md){
+            top: 1%;
+            right: 66%;
+        }
     }
 }
 
